fix hud z-index

--- a/src/css/game-hud.css
+++ b/src/css/game-hud.css
@@ -1,6 +1,6 @@
 #game-hud {
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   pointer-events: none;
   width: 100%;
   height: 100%;
